# crossfirmarizer

./: .gitignore  README.md  circleci_set_version.py  crossfirmarizer_version.py
.circleci/: config.yml
crossfirmarizer/: crossfirmarizer.ioc  crossfirmarizer_ATSAMD20J18.mk  crossfirmarizer_ATmega2560.mk  crossfirmarizer_STM32F446xx.mk  upload_script.txt
crossfirmarizer_client_python/: pyproject.toml
crossfirmarizer_client_python/examples/atmega2560/: simple_button.py  simple_button_listen.py  simple_digital_sensor.py  simple_lcd1602.py  simple_led.py  simple_servo.py  simple_ultrasonic.py  thread_example.py
crossfirmarizer_client_python/examples/atsamd20j18/: simple_button.py  simple_button_listen.py  simple_lcd1602.py  simple_led.py  simple_servo.py  simple_ultrasonic.py  thread_example.py
crossfirmarizer_client_python/examples/stm32f446xx/: simple_button.py  simple_button_listen.py  simple_digital_sensor.py  simple_lcd1602.py  simple_led.py  simple_servo.py  simple_ultrasonic.py  thread_example.py
crossfirmarizer_client_python/src/crossfirmarizer/: __init__.py  crossfirmarizer.py  liquid_crystal_i2c.py  pwm.py  serial_packet.py  servo_sg90.py
crossfirmarizer_client_python/src/crossfirmarizer/targets/: __init__.py  atmega2560.py  stm32f446xx.py
docker/: Dockerfile.arm-gcc-toolchain-15.2.0  Dockerfile.avr-toolchain-15.2.0
test/: crossfirmarizer_test.mk
test/features/: serial_packet.feature  simple_button.feature  simple_led.feature
test/inc/: csv_parser.h  pins.h  simulation_state.h
test/serial_packet/: crossfirmarizer_serial_test.mk
(+233 files in other folders)
